add variable insepctor tip

--- a/R0/R0_tuto_first_steps.ipynb
+++ b/R0/R0_tuto_first_steps.ipynb
@@ -528,6 +528,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-warning\"><b> Inspector Variable: </b> On this environment, you can also open a new tab in the Jupyter lab to inspect all R objects in your R session. To do so, right click on the notebook and select \"Open Variable Inspector\". You should see the same objects as the ones returned by the ls() commands with some additional information on their structure. </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Similarly, you can get rid of an object with the function `rm()`."
    ]
   },
