--- a/R1/R1_practice_notebook.ipynb
+++ b/R1/R1_practice_notebook.ipynb
@@ -83,6 +83,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-warning\"><b>Open variable inspector:</b> right click on the notebook and select \"Open Variable Inspector\". A new tab will open. </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 1. Identifiez votre répertoire de travail"
    ]
   },
