--- a/R1/R1_tuto_vectors.ipynb
+++ b/R1/R1_tuto_vectors.ipynb
@@ -56,6 +56,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-warning\"><b>Open variable inspector:</b> right click on the notebook and select \"Open Variable Inspector\". A new tab will open. </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## **I. - Classes and types of R objects**\n",
     "___\n"
@@ -82,9 +89,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>3</li><li>7</li><li>1</li><li>2</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 3\n",
+       "\\item 7\n",
+       "\\item 1\n",
+       "\\item 2\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 3\n",
+       "2. 7\n",
+       "3. 1\n",
+       "4. 2\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 3 7 1 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#cell 1\n",
     "x <- c(3,7,1,2) # we define a variable x with 4 numeric values concatenated\n",
