correct typo on .RData object

--- a/R1/R1_tuto_vectors.ipynb
+++ b/R1/R1_tuto_vectors.ipynb
@@ -754,7 +754,7 @@
    "outputs": [],
    "source": [
     "#cell 30\n",
-    "save(weight, size, bmi, file = \"anthoropo.RData\")"
+    "save(weight, size, bmi, file = \"anthropo.RData\")"
    ]
   },
   {
