--- a/R1/R1_tuto_vectors.ipynb
+++ b/R1/R1_tuto_vectors.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -141,9 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 3 7 1 2\n"
+     ]
+    }
+   ],
    "source": [
     "#cell 2\n",
     "print(x) "
@@ -158,9 +166,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#cell 3\n",
     "is.numeric(x)"
@@ -177,9 +204,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>FALSE</li><li>FALSE</li><li>TRUE</li><li>FALSE</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item FALSE\n",
+       "\\item FALSE\n",
+       "\\item TRUE\n",
+       "\\item FALSE\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. FALSE\n",
+       "2. FALSE\n",
+       "3. TRUE\n",
+       "4. FALSE\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] FALSE FALSE  TRUE FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#cell 4\n",
     "x<2 # we test wether the 4 values are < 2"
@@ -194,9 +255,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>TRUE</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item FALSE\n",
+       "\\item FALSE\n",
+       "\\item FALSE\n",
+       "\\item TRUE\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. FALSE\n",
+       "2. FALSE\n",
+       "3. FALSE\n",
+       "4. TRUE\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] FALSE FALSE FALSE  TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#cell 5\n",
     "x==2"
@@ -211,9 +306,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'this is a string of character'"
+      ],
+      "text/latex": [
+       "'this is a string of character'"
+      ],
+      "text/markdown": [
+       "'this is a string of character'"
+      ],
+      "text/plain": [
+       "[1] \"this is a string of character\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#cell 6\n",
     "s <- \"this is a string of character\"\n",
@@ -222,9 +336,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'numeric'"
+      ],
+      "text/latex": [
+       "'numeric'"
+      ],
+      "text/markdown": [
+       "'numeric'"
+      ],
+      "text/plain": [
+       "[1] \"numeric\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'character'"
+      ],
+      "text/latex": [
+       "'character'"
+      ],
+      "text/markdown": [
+       "'character'"
+      ],
+      "text/plain": [
+       "[1] \"character\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "FALSE"
+      ],
+      "text/latex": [
+       "FALSE"
+      ],
+      "text/markdown": [
+       "FALSE"
+      ],
+      "text/plain": [
+       "[1] FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 0 0 1 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "FALSE"
+      ],
+      "text/latex": [
+       "FALSE"
+      ],
+      "text/markdown": [
+       "FALSE"
+      ],
+      "text/plain": [
+       "[1] FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "FALSE"
+      ],
+      "text/latex": [
+       "FALSE"
+      ],
+      "text/markdown": [
+       "FALSE"
+      ],
+      "text/plain": [
+       "[1] FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#cell 7\n",
     "class(x)\n",
@@ -235,6 +483,41 @@
     "is.numeric(\"1\")\n",
     "is.numeric(as.numeric(\"1\"))\n",
     "is.numeric(c(1,\"1\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in 2 + c(\"1\", 2): non-numeric argument to binary operator\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in 2 + c(\"1\", 2): non-numeric argument to binary operator\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "2  + c(\"1\", 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " chr [1:2] \"1\" \"1\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "str(c(1,\"1\"))"
    ]
   },
   {
