--- a/R0/R0_tuto_first_steps.ipynb
+++ b/R0/R0_tuto_first_steps.ipynb
@@ -80,7 +80,7 @@
     "- available for Windows, Mac and Unix\n",
     "- widely used in academia, finance, pharma, social sciences...\n",
     "\n",
-    "R is a statsitical programming language. This project started in 1993. We are currently at version 4.0.4 (15/02/2021). There is a new release twice a year."
+    "R is a statsitical programming language. This project started in 1993. We are currently at version 4.1.3 (16/06/2023). There is a new release twice a year."
    ]
   },
   {
@@ -124,6 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 1\n",
     "2+2\n",
     "2-3\n",
     "6/2\n",
@@ -144,7 +145,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean(c(1,2)) # we will see we need to put concatenate different values with a c() first\n",
+    "# code cell 2\n",
+    "mean(c(1, 2)) # we will see we need to put concatenate different values with a c() first\n",
     "exp(-2)"
    ]
   },
@@ -161,7 +163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "round(exp(-2), 2)"
+    "# code cell 3\n",
+    "round(exp(-2), 2)\n",
+    "round(exp(-2), digits = 2)"
    ]
   },
   {
@@ -177,7 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log(100,base=10) #we want to get the log of 100 in base 10 "
+    "# code cell 4\n",
+    "log(100, base = 10) #we want to get the log of 100 in base 10 "
    ]
   },
   {
@@ -206,6 +211,7 @@
    },
    "outputs": [],
    "source": [
+    "# code cell 5\n",
     "help(round)"
    ]
   },
@@ -217,7 +223,17 @@
    },
    "outputs": [],
    "source": [
+    "# code cell 6\n",
     "?exp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "<div class=\"alert alert-block alert-info\"><b>Tip:</b> If you want to mask the help, go to the cell and click on its left. </div>"
    ]
   },
   {
@@ -244,6 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 7\n",
     "x <- 2"
    ]
   },
@@ -260,6 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 8\n",
     "x"
    ]
   },
@@ -276,6 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 9\n",
     "x + x"
    ]
   },
@@ -292,6 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 10\n",
     "y <- x + 3"
    ]
   },
@@ -308,6 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 11\n",
     "y"
    ]
   },
@@ -317,6 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 12\n",
     "x <- 4\n",
     "y"
    ]
@@ -343,6 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 13\n",
     "y <- x + 3\n",
     "y"
    ]
@@ -360,6 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 14\n",
     "s <- \"this is a string of characters\"\n",
     "s"
    ]
@@ -377,6 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 15\n",
     "class(x)\n",
     "class(s)"
    ]
@@ -394,6 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 16\n",
     "\"1\"\n",
     "class(\"1\")\n",
     "class(1)"
@@ -412,6 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 17\n",
     "try(\"1\" + 3)# I added the try function to avoid stopping the notebook if you want to run all the cells"
    ]
   },
@@ -428,6 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 18\n",
     "1 + 3"
    ]
   },
@@ -454,6 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 19\n",
     "sessionInfo()"
    ]
   },
@@ -472,6 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 20\n",
     "getwd()"
    ]
   },
@@ -493,6 +523,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "#raw cell 1\n",
     "setwd('/srv/home/cvandiedonck/megm1_ue5_r/R0') #change with your login!!!\n",
     "getwd() #change is visible"
    ]
@@ -521,14 +552,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 21\n",
     "ls()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\"><b> Inspector Variable: </b> On this environment, you can also open a new tab in the Jupyter lab to inspect all R objects in your R session. To do so, right click on the notebook and select \"Open Variable Inspector\". You should see the same objects as the ones returned by the ls() commands with some additional information on their structure. </div>"
    ]
   },
   {
@@ -544,6 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 22\n",
     "rm(y)\n",
     "ls()"
    ]
@@ -561,6 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 23\n",
     "dir()"
    ]
   },
@@ -570,6 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 24\n",
     "list.files(pattern=\".ipynb\")"
    ]
   },
@@ -609,6 +637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 25\n",
     "save(x,file=\"x.RData\")"
    ]
   },
@@ -626,6 +655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 26\n",
     "rm(x)\n",
     "ls()"
    ]
@@ -636,6 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 27\n",
     "load(\"x.RData\")\n",
     "ls()\n",
     "x #x is again accessible"
@@ -654,6 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 28\n",
     "file.remove(\"x.RData\") #remove file: returns TRUE on successful removal"
    ]
   },
@@ -670,7 +702,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save(x,s, file=\"xands.RData\")"
+    "# code cell 29\n",
+    "save(x,s, file = \"xands.RData\")"
    ]
   },
   {
@@ -679,6 +712,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 30\n",
     "file.remove(\"xands.RData\")# to clean the working directory"
    ]
   },
@@ -702,8 +736,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 31\n",
     "ls()\n",
-    "save.image(file=\"AllMyData.RData\")"
+    "save.image(file = \"AllMyData.RData\")"
    ]
   },
   {
@@ -719,6 +754,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 32\n",
     "rm(list=ls()) # this command removes all the objects on the R session\n",
     "ls() #all variables have been removed"
    ]
@@ -729,6 +765,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 33\n",
     "load(\"AllMyData.RData\")\n",
     "ls() #all variables are accessible again\n",
     "file.remove(\"AllMyData.RData\")\n",
@@ -753,6 +790,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "#raw cell 3\n",
     "ls()\n",
     "savehistory(file=\"MyHistory.Rhistory\") #save all previously run commands in a special formatted file\n",
     "loadhistory(\"MyHistory.Rhistory\") #load all commands stored in the specified file\n",
@@ -827,7 +865,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code cell 34\n",
     "sessionInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*[Last version revised on 04/09/2023 by @CVandiedonck]*"
    ]
   }
  ],
@@ -843,8 +889,10 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.3"
+   "version": "4.2.0"
   },
+  "toc-autonumbering": false,
+  "toc-showcode": true,
   "toc-showtags": true
  },
  "nbformat": 4,
