update R0 and R1 tutos for 2023

--- a/R0/R0_tuto_first_steps.ipynb
+++ b/R0/R0_tuto_first_steps.ipynb
@@ -238,6 +238,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "<div class=\"alert alert-block alert-info\"><b>Tip:</b> You may also open the contextuel help menu for a given fonction in another tabulation. To do so, select the function with your mouse in the code cell, then click on <i><b>Help</b></i> in the main menu and select <i><b>Show Contextual Help</b></i>. You may also use the shortcut <kbd>Ctrl</kbd> + <kbd>i</kbd>  to do so.</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### **I-2 - Assigning data into R objects, using and reading them**\n",
