--- a/R1/R1_tuto_vectors.ipynb
+++ b/R1/R1_tuto_vectors.ipynb
@@ -49,14 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>Warning:</b> you are strongly advised to run the cells in the indicated order. If you want to rerun cells above, you can just restart the kernel to start at 1 again. </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>Open variable inspector:</b> right click on the notebook and select \"Open Variable Inspector\". A new tab will open. </div>"
+    "<div class=\"alert alert-block alert-warning\"><b>Warning:</b> you are strongly advised to run the cells in the indicated order. Please keep their numbering. If you add more cells, use another way to name/count your own cells. Do not use the terminal, use directly the notebook. If you want to rerun cells above, you can just restart the kernel to start at 1 again. </div>"
    ]
   },
   {
@@ -93,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 1\n",
+    "#code cell 1\n",
     "x <- c(3,7,1,2) # we define a variable x with 4 numeric values concatenated\n",
     "x"
    ]
@@ -111,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 2\n",
+    "#code cell 2\n",
     "print(x) "
    ]
   },
@@ -128,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 3\n",
+    "#code cell 3\n",
     "is.numeric(x)"
    ]
   },
@@ -147,8 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 4\n",
-    "x<2 # we test wether the 4 values are < 2"
+    "#code cell 4\n",
+    "x < 2 # we test wether the 4 values are < 2"
    ]
   },
   {
@@ -164,8 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 5\n",
-    "x==2"
+    "#code cell 5\n",
+    "x == 2"
    ]
   },
   {
@@ -181,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 6\n",
+    "#code cell 6\n",
     "s <- \"this is a string of character\"\n",
     "s"
    ]
@@ -192,40 +185,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 7\n",
+    "#code cell 7\n",
     "class(x)\n",
     "class(s)\n",
     "is.character(s)\n",
     "is.numeric(s)\n",
-    "print(as.numeric(x<2))\n",
+    "print(as.numeric(x < 2))\n",
     "is.numeric(\"1\")\n",
     "is.numeric(as.numeric(\"1\"))\n",
-    "is.numeric(c(1,\"1\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2  + c(\"1\", 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str(c(1,\"1\"))"
+    "is.numeric(c(1, \"1\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>Coercion rules:</b><br></div>\n",
+    "As a reminder, you cannot perform numeric opeations with non numeric variables (see example below)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code cell 8\n",
+    "try(2  + c(\"1\", 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Indeed, you can see below that the vector c(1, \"1\") is a character vector. The first element of this vector has been coerced into a character element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code cell 9\n",
+    "str(c(1, \"1\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\"><b>Coercion rules:</b><br>\n",
     "\n",
     "There are some coercion rules when doing conversions on concatenating elements of different types:<br>\n",
     "`logical <integer < numeric < complex < character < list`\n",
@@ -233,7 +242,7 @@
     "- if character strings are present, everything will be coerced to a character string.\n",
     "- otherwise logical values are coerced to numbers: TRUE is converted to 1, FALSE to 0\n",
     "- values are converted to the simplest type required to represent all information\n",
-    "- object attributes (sort of metadata of objects/variables like their names) are dropped"
+    "- object attributes (sort of metadata of objects/variables like their names) are dropped</div>"
    ]
   },
   {
@@ -253,9 +262,11 @@
     "\n",
     "\n",
     "## **II. - Vectors**\n",
+    "---\n",
     "\n",
-    "### **a. Creating vectors** \n",
-    "They are **the most elementary R objects**. They have one dimension. Some functions to create them are `c()`, `seq()`, `:`, `rep()`, `append()`...\n"
+    "They are **the most elementary R objects**. They have one dimension. Some functions to create them are `c()`, `seq()`, `:`, `rep()`, `append()`...\n",
+    "\n",
+    "### **a. Creating vectors** \n"
    ]
   },
   {
@@ -264,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 8\n",
+    "#code cell 10\n",
     "a <- c()\n",
     "a"
    ]
@@ -275,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 9\n",
+    "#code cell 11\n",
     "weight <- c(60, 72, 57, 90, 95, 72)\n",
     "weight"
    ]
@@ -284,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b> Information :</b><br> In such a jupyter notebook, by default each item of a vector is displayed sperated by a median dot. Should you wish to display a vector in a more classical way like in the R console with the index of the first value of each line indicated between [], you should use the function <b>print()</b>. </div>\n"
+    "<div class=\"alert alert-block alert-info\"><b>Remark:</b><br> In such a jupyter notebook, by default each item of a vector is displayed sperated by a median dot. Should you wish to display a vector in a more classical way like in the R console with the index of the first value of each line indicated between [], you should use the function <b>print()</b>. </div>\n"
    ]
   },
   {
@@ -293,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 10\n",
+    "#code cell 12\n",
     "print(weight)"
    ]
   },
@@ -303,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 11\n",
+    "#code cell 13\n",
     "4:10\n",
     "print(4:10)"
    ]
@@ -314,8 +325,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 12\n",
-    "print(seq(4,10))"
+    "#code cell 14\n",
+    "-10:0"
    ]
   },
   {
@@ -324,8 +335,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 13\n",
-    "print(seq(2,10,2))"
+    "#code cell 15\n",
+    "print(seq(from = 4, to = 10))\n",
+    "print(seq(4, 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above cell 15, the two commands are equivalent. In the first one we name each argument. In the second one, we use them according to the by default usage as you can see in the help.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\"><b>Tip:</b><br> In R, you may not write the names of the argument provided you use them in the correct order. </div>"
    ]
   },
   {
@@ -334,8 +355,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 14\n",
-    "print(rep(4,2))"
+    "#code cell 16\n",
+    "print(seq(from = 1, to = 10, by = 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code cell 17\n",
+    "print(rep(x = 4, times = 2))"
    ]
   },
   {
@@ -351,10 +382,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 15\n",
-    "print(rep(seq(4,10),2))\n",
-    "print(c(rep(1,4),rep(2,4)))\n",
-    "print(c(5,s))"
+    "#code cell 18\n",
+    "print(rep(seq(4, 10, 2),3))\n",
+    "print(c(rep(1, 4), rep(2, 4)))\n",
+    "print(c(5, s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\"> <b><u> 🧠 Question: what is in the squared bracket on the side?</b></u><br> => Look at the outputs of the follwing two code cells and explain it</b>. </div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code cell 19\n",
+    "print(1:100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code cell 20\n",
+    "print(2:101)"
    ]
   },
   {
@@ -373,9 +431,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 16\n",
-    "mode(c(5,s))\n",
-    "class(c(5,s))\n",
+    "#code cell 21\n",
+    "mode(c(5, s))\n",
+    "class(c(5, s))\n",
     "length(1:10)\n",
     "length(weight)\n",
     "str(weight)"
@@ -389,7 +447,7 @@
    },
    "source": [
     "\n",
-    "<div class=\"alert alert-block alert-info\"> <b>=> Exercice 1 </b>: creating numeric vectors<br>\n",
+    "<div class=\"alert alert-block alert-info\"> <b>=> 🧩 Exercice 1 </b>: creating numeric vectors<br>\n",
     "    Open the notebook <code>megm1_ue5_r/R1/R1_practice.ipynb</code> and start with the first exercice. Then come back here.</div>"
    ]
   },
@@ -417,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 17\n",
+    "#code cell 22\n",
     "size <- c(1.75, 1.8, 1.65, 1.9, 1.74, 1.91)\n",
     "print(size^2)\n",
     "print(bmi <- weight/size^2 )\n",
@@ -444,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 18\n",
+    "#code cell 23\n",
     "print(sort(size))\n",
     "mean(size)\n",
     "sd(size)\n",
@@ -463,7 +521,7 @@
    },
    "source": [
     "\n",
-    "<div class=\"alert alert-block alert-info\"> <b>=> Exercices 2 and 3 </b>: manipulate numeric vectors<br>\n",
+    "<div class=\"alert alert-block alert-info\"> <b>=> 🧩 Exercices 2 and 3 </b>: manipulate numeric vectors<br>\n",
     "    Do the second and third exercices in the notebook <code>megm1_ue5_r/R1/R1_practice.ipynb</code>. Then come back here.</div>"
    ]
   },
@@ -496,7 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 19\n",
+    "#code cell 24\n",
     "print(1:50)\n",
     "print(5:50)"
    ]
@@ -521,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell  20\n",
+    "#code cell 25\n",
     "print(size) # to remember what it contains\n",
     "size[1]"
    ]
@@ -539,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 21\n",
+    "#code cell 26\n",
     "size[2]"
    ]
   },
@@ -556,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 22\n",
+    "#code cell 27\n",
     "size[6]"
    ]
   },
@@ -573,8 +631,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 23\n",
-    "size[c(2,6)]"
+    "#code cell 28\n",
+    "size[c(2, 6)]"
    ]
   },
   {
@@ -590,8 +648,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 24\n",
-    "size[c(6,2)]"
+    "#code cell 29\n",
+    "size[c(6, 2)]"
    ]
   },
   {
@@ -607,8 +665,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 25\n",
-    "min(size[c(6,2)])"
+    "#code cell 30\n",
+    "min(size[c(6, 2)])"
    ]
   },
   {
@@ -629,7 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Finally you can **add a name to the different values**. Names on vector values are attributes of the vector. Here the function `names()` returns a vector of the names of vector `size`. "
+    "- Finally you can **add a name to the different values**. Names on vector values are ***\"attributes\"*** of the vector. Here the function `names()` returns a vector of the names of vector `size`. "
    ]
   },
   {
@@ -638,7 +696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 26\n",
+    "#code cell 31\n",
     "names(size)"
    ]
   },
@@ -647,7 +705,7 @@
    "metadata": {},
    "source": [
     "The above command returns a NULL vector since values of the vector \"size\" currently are unnamed.\n",
-    "We can simply specify a vector with character strings we assign to the vector of the names of the vector."
+    "We can simply specify a character strings vector with  the names and we assign it to the vector of the names of the vector size."
    ]
   },
   {
@@ -656,8 +714,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 27\n",
-    "names(size) <- c(\"Fabien\",\"Pierre\",\"Sandrine\",\"Claire\",\"Bruno\",\"Delphine\")\n",
+    "#code cell 32\n",
+    "names(size) <- c(\"Fabien\", \"Pierre\", \"Sandrine\", \"Claire\",\n",
+    "                 \"Bruno\", \"Delphine\")\n",
     "size\n",
     "str(size)"
    ]
@@ -703,7 +762,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 28\n",
+    "#code cell 33\n",
     "ls()"
    ]
   },
@@ -720,8 +779,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 29\n",
-    "save.image(file=\"RSession1.RData\")"
+    "#code cell 34\n",
+    "save.image(file = \"RSession1.RData\")"
    ]
   },
   {
@@ -737,7 +796,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cell 30\n",
+    "#code cell 35\n",
     "save(weight, size, bmi, file = \"anthropo.RData\")"
    ]
   },
@@ -760,6 +819,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#code cell 36\n",
     "sessionInfo()"
    ]
   },
@@ -794,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[version 19/09/2022 - last revision: @CVandiedonck]"
+    "[version 11/09/2023 - last revision: @CVandiedonck]"
    ]
   }
  ],
@@ -810,8 +870,10 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.3"
+   "version": "4.2.0"
   },
+  "toc-autonumbering": false,
+  "toc-showcode": false,
   "toc-showtags": true
  },
  "nbformat": 4,
