update R1_practice for 2023

--- a/R1/R1_practice.ipynb
+++ b/R1/R1_practice.ipynb
@@ -21,7 +21,7 @@
     "---\n",
     "    \n",
     "**Conseils**    \n",
-    "> Les exercices proposés sont donnés dans un ordre progressif qui suit celui du diaporama associé. Ils ont des niveaux de difficulté variable. Pour chaque exercice, des fonctions R vous sont suggérées. N’hésitez pas à consulter leur menu d’aide en tapant soit `?nom_fonction`, soit `help(nom_fonction)`. Vous pouvez parvenir aux mêmes résultats avec d’autres commandes. Les commandes les plus courtes sont en général les meilleures. Une correction détaillée sera fournie.\n",
+    "> Les exercices proposés sont donnés dans un ordre progressif qui suit celui du diaporama associé. Ils ont des niveaux de difficulté variable. Pour chaque exercice, des fonctions R vous sont suggérées. N’hésitez pas à consulter leur menu d’aide en tapant soit `?nom_fonction`, soit `help(nom_fonction)` ou en consultant l'aide contextuelle (Menu/Help/Sow Contextual Help ou <kbd>Ctrl</kbd> + <kbd>i</kbd>). Vous pouvez parvenir aux mêmes résultats avec d’autres commandes. Les commandes les plus courtes sont en général les meilleures. Une correction détaillée sera fournie.\n",
     "\n",
     "> Vous pouvez réaliser ces exercices directement dans ce notebook sur `adenine` en indiquant votre code dans les cellules laissées libres. Pour ajouter une nouvelle cellule, cliquez simplement sur le `+` dans le menu en haut à gauche du notebook (cf. rappels sur les notebooks en bas de ce notebook). Vous pouvez mettre plusieurs lignes de code aussi par cellule.\n",
     "> Pour executer les cellules, cliquez sur `Shift+Enter`. Executez les dans le bon ordre.\n",
@@ -30,39 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>1</li><li>10</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 1\n",
-       "\\item 10\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 1\n",
-       "2. 10\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1]  1 10"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_vector <- c(1, 10) # pour générer le vecteur et l'assigner dans un objet \"my_vector\"\n",
     "my_vector # l'affichage ici montre deux éléments, chacun séparé par un point médian."
@@ -107,13 +77,6 @@
    "metadata": {},
    "source": [
     "<mark> Do not hesitate to try other commands by adding other cells. cf  useful commands at the bottom of the notebook</mark> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>Open variable inspector:</b> right click on the notebook and select \"Open Variable Inspector\". A new tab will open. </div>"
    ]
   },
   {
@@ -213,6 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "Créez le vecteur `vec2` contenant les valeurs suivantes : 0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0.\n",
     "\n",
     "Réalisez cette action au moins de deux façons différentes.\n",
@@ -240,6 +204,7 @@
    "metadata": {},
    "source": [
     "---\n",
+    "---\n",
     "## Exercice 2 : manipulation de données numériques\n",
     "Effectuez l’opération suivante : 4850 / 26. Affichez le résultat avec seulement 2 ou 3 décimales.\n",
     "\n",
@@ -261,6 +226,7 @@
    "metadata": {},
    "source": [
     "---\n",
+    "---\n",
     "## Exercice 3 : création d'un vecteur avec des chaînes de caractères incrémentées\n",
     "Créez le vecteur `vec3` contenant les noms suivants : « individu1 », « individu2 », ... , « individu100».\n",
     "\n",
@@ -281,6 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "---\n",
     "## Exercice 4 : création et manipulation de vecteurs de chaînes de caractères\n",
     "Affichez la date du jour. Sauvegardez le résultat dans une variable `dateJour`.\n",
@@ -307,6 +274,7 @@
    "metadata": {},
    "source": [
     "---\n",
+    "---\n",
     "## Exercice 5 : utilisation d'une constante de R et manipulation de chaînes de caractères\n",
     "Créez la variable `vec4` dans laquelle vous assignerez les 24 lettres de l’alphabet en lettres capitales.\n",
     "\n",
@@ -329,6 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "---\n",
     "## Exercice 6 : manipulation avancée d'un vecteur\n",
     "Créez un vecteur `vec5` dans lequel vous entrerez les entiers de 1 à 10, en entrant d’abord les valeurs impaires puis les valeurs paires.\n",
@@ -355,6 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "---\n",
     "## Exercice 7 : tirage aléatoire et statistiques descriptives de données numériques\n",
     "Tirez aléatoirement 10 nombres dans un ensemble de valeurs comprises entre 1 et 100.\n",
@@ -422,6 +392,7 @@
    },
    "source": [
     "---\n",
+    "---\n",
     "## Exercice 8 : tirage aléatoire d'une loi de probabilité connue et filtrage de valeurs\n",
     "Créez un vecteur `v7` dans lequel vous assignerez 50 valeurs tirées aléatoirement parmi 50 données manquantes et 50 données issues d’une loi normale de moyenne 3 et de variance 4.\n",
     "\n",
@@ -445,6 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "Dans un vecteur `vec8`, gardez uniquement les valeurs positives du vecteur `vec7`.\n",
     "\n",
     "Affichez le vecteur `vec8` pour vérifier qu’il ne contient que des données positives.\n",
@@ -464,6 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "---\n",
     "## Exercice 9 : comptage de valeurs, remplacement de valeurs et coercion\n",
     "Simulez 100 lancers d’une pièce de monnaie. Pour cela, réalisez un tirage avec remise dans un ensemble de deux valeurs possibles (« pile » et « face ») et assignez le résultat dans un vecteur `results`.\n",
@@ -485,6 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "Réalisez la même simulation que ci-dessus, mais en biaisant la pièce de monnaie (la probabilité d’obtenir « pile » doit seulement être de 0,3).\n",
     "\n",
     "Quelles proportions de piles et de faces avez-vous obtenues ?\n",
@@ -510,6 +484,7 @@
     "tags": []
    },
    "source": [
+    "---\n",
     "---\n",
     "## Exercice 10 : importation et filtrage de données\n",
     "Importer dans votre session R le jeu de données `precip`. Ce jeu de données est pré-enregistré dans le logiciel R et regroupe des données de précipitations dans différentes villes américaines.\n",
@@ -578,6 +553,8 @@
     "tags": []
    },
    "source": [
+    "---\n",
+    "---\n",
     "## <mark>Check list des actions avant la prochaine session R<mark>\n",
     "\n",
     "_Pour cocher les cases, ouvrez la cellule du notebook et remplacez l'espace entre les crochets par un `x` lorsque l'action est effectuée_\n",
@@ -590,7 +567,7 @@
     "\n",
     "[ ] refaire les exercices sans les corrections\n",
     "\n",
-    "[ ] faire les travaux préparatoires de la session 2 sur les matrices (video et notebook,diaporama et script correspondants à la video)."
+    "[ ] faire les travaux préparatoires de la session 2 sur les matrices (video et notebook, diaporama et script correspondants à la video). "
    ]
   },
   {
@@ -639,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[version 19/09/2022 - last revision: @CVandiedonck]"
+    "[version 11/09/2023 - last revision: @CVandiedonck]"
    ]
   }
  ],
@@ -655,7 +632,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.3"
+   "version": "4.2.0"
   },
   "toc-autonumbering": false
  },
