add icon for exercices

--- a/R1/R1_tuto_vectors.ipynb
+++ b/R1/R1_tuto_vectors.ipynb
@@ -730,7 +730,7 @@
    "source": [
     "---\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\"> <b>=> Exercices 4 to 10 </b>: manipulate numeric vectors<br>\n",
+    "<div class=\"alert alert-block alert-info\"> <b>=> 🧩 Exercices 4 to 10 </b>: manipulate numeric vectors<br>\n",
     "    Do these exercices in the notebook <code>megm1_ue5_r/R1/R1_practice.ipynb</code> at home. </div>"
    ]
   },
